--- a/Códigos/indexx.html
+++ b/Códigos/indexx.html
@@ -32,7 +32,7 @@
     <section class="grid">
 
     <div class="secções">
-        <h2>PESQUISAS  SALVAS</h2>
+        <h2>TÓPICOS</h2>
         <ul>
             <li><input type="text" id="txtPesquisa" list="historico">
             <button id="btnPesquisa"  onclick="executaPesquisa();">Search</button></li>
@@ -46,7 +46,7 @@
             <option value="Saúde"></option>
         </datalist>
         -------------------------------------
-        <h3>CATEGORIAS</h3>
+        <h3>PAÍSES</h3>
         <ul class="países">
            <li><a href="#" id="Portugal" onclick="executaPortugal();">Portugal</a></li> 
            <li><a href="#" id="França" onclick="executaFrança();">França</a></li> 
@@ -57,21 +57,22 @@
 
     <div id="tela">
         <div class="box-noticia">
-            <img src="https://www.esporteinterativo.com.br/__export/1590261256397/sites/esporteinterativo/img/2020/05/23/49920800191_bf61e2b839_b_crop1590261010131.jpg_2060162980.jpg" alt="">
-            <span class="titulo">Eleições terminam e Sérgio Rodrigues é o novo presidente do Cruzeiro pelos próximos 2 anos.</span></br>
-            <span class="creditos">15/06/20 - Globo Esporte - Rogério Machado</span></br>
-            <span class="text">Novo presidente tem o desafio de reerguer o Cruzeiro que passa por sua maior crise em toda a história, devendo mais de 800 milhões de reais em ações na FIFA.
-                <a href="#">Leia mais...</a></br>
+            <img src="#" alt="">
+            <span class="titulo"></span></br>
+            <span class="creditos"></span></br>
+            <span class="text">
+                <a href="#"></a></br>
             </span> 
         </div>
-
         <script src="not.js"></script>
     </div>
     </section>
 
     <footer class="footer">
         <div>
+            <p></p>
             <p>Todos os direitos reservados</p>
+            <p></p>
         </div>
     </footer>
  </body>
