--- a/Códigos/indexx.html
+++ b/Códigos/indexx.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
  </head>
  <body>
-     <header class="header">
+     <header class="header" style="border-radius: 40px;">
         <h1>Portal de Noticias</h1>
         <nav>
             <input type="checkbox" id="menuToggle">
@@ -18,9 +18,9 @@
             </label>
         
             <ul class="menu">
-                <li><a href="#" id="Brasil" onclick="executaBrasil();">HOME</a></li>
-                <li><a href="#">Contato</a></li>
-                <li><a href="#">Divulgação</a></li>
+                <li><a  id="Brasil" onclick="executaBrasil();">HOME</a></li>
+                <li><a>Contato: (31)9999-9999</a></li>
+                <li><a>MAIS</a></li>
                     </div>
                     
                 </li>
@@ -34,8 +34,8 @@
     <div class="secções">
         <h2>TÓPICOS</h2>
         <ul>
-            <li><input type="text" id="txtPesquisa" list="historico">
-            <button id="btnPesquisa"  onclick="executaPesquisa();">Search</button></li>
+            <li><input type="text" id="txtPesquisa" list="historico" style="border-radius: 40px; background-color: rgb(204, 193, 193);">
+            <button id="btnPesquisa" onclick="executaPesquisa();" style="margin-left: 25px; border-radius: 40px; background-color: rgb(204, 193, 193);">Search</button></li>
             <li><a href="#" id="Tecnologia" onclick="executaTecnologia();">Tecnologia</a></li> 
             <li><a href="#" id="Esportes" onclick="executaEsportes();">Esportes</a></li> 
             <li><a href="#" id="Saúde" onclick="executaSaúde();">Saúde</a></li>
@@ -45,7 +45,7 @@
             <option value="Esportes"></option>
             <option value="Saúde"></option>
         </datalist>
-        -------------------------------------
+        <hr>
         <h3>PAÍSES</h3>
         <ul class="países">
            <li><a href="#" id="Portugal" onclick="executaPortugal();">Portugal</a></li> 
@@ -68,12 +68,5 @@
     </div>
     </section>
 
-    <footer class="footer">
-        <div>
-            <p></p>
-            <p>Todos os direitos reservados</p>
-            <p></p>
-        </div>
-    </footer>
  </body>
 </html>
